# xyT

./: .gitignore  CMakeLists.txt  bower.json  index.html  main.cpp  params.json
bower_components/openseadragon/: .bower.json
css/: xyt-viewer.css
dzi/: ChungKing.dzi
js/: xyt.js
